// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-licenses-list Should render View all when the link is provided 1`] = `
<sc-licenses-list all-link="www.test.com" heading="Test Heading">
  <mock:shadow-root>
    <sc-dashboard-module class="purchase" error="" part="base">
      <span slot="heading">
        <slot name="heading">
          Test Heading
        </slot>
      </span>
      <div>
        <sc-divider style="--spacing: 0;"></sc-divider>
        <slot name="empty">
          <sc-empty icon="file-text">
            You don't have any licenses.
          </sc-empty>
        </slot>
      </div>
    </sc-dashboard-module>
  </mock:shadow-root>
</sc-licenses-list>
`;

exports[`sc-licenses-list Should render heading that is passed as a prop 1`] = `
<sc-licenses-list heading="Test Heading">
  <mock:shadow-root>
    <sc-dashboard-module class="purchase" error="" part="base">
      <span slot="heading">
        <slot name="heading">
          Test Heading
        </slot>
      </span>
      <div>
        <sc-divider style="--spacing: 0;"></sc-divider>
        <slot name="empty">
          <sc-empty icon="file-text">
            You don't have any licenses.
          </sc-empty>
        </slot>
      </div>
    </sc-dashboard-module>
  </mock:shadow-root>
</sc-licenses-list>
`;

exports[`sc-licenses-list renders 1`] = `
<sc-licenses-list>
  <mock:shadow-root>
    <sc-dashboard-module class="purchase" error="" part="base">
      <span slot="heading">
        <slot name="heading">
          Licenses
        </slot>
      </span>
      <div>
        <sc-divider style="--spacing: 0;"></sc-divider>
        <slot name="empty">
          <sc-empty icon="file-text">
            You don't have any licenses.
          </sc-empty>
        </slot>
      </div>
    </sc-dashboard-module>
  </mock:shadow-root>
</sc-licenses-list>
`;
